--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+:root {
+  /* colors */
+  --colors-brand-beige-00: #fefefb;
+  --colors-brand-beige-10: #f7f6e8; /* Background */
+  --colors-brand-turquoise-00: #e6fafe;
+  --colors-brand-turquoise-20: #b4f1fd;
+  --colors-brand-turquoise-50: #69e3fc; /* Brand */
+  --colors-brand-yellow-40: #ffea80; /* Brand */
+  --colors-brand-yellow-100: #e5c000;
+  --colors-brand-orange-70: #ff7733; /* Brand */
+  --colors-grey-00: #ffffff;
+  --colors-grey-20: #cccccc;
+  --colors-grey-40: #999999;
+  --colors-grey-60: #666666;
+  --colors-grey-80: #333333;
+  --colors-grey-100: #000000;
+
+  /* Font sizes */
+  --step--1: clamp(0.8rem, 0.7809rem + 0.0813vi, 0.844rem);
+  --step-0: clamp(1rem, 0.9458rem + 0.2312vi, 1.125rem);
+  --step-1: clamp(1.25rem, 1.1418rem + 0.4617vi, 1.4996rem);
+  --step-2: clamp(1.5625rem, 1.3733rem + 0.8074vi, 1.999rem);
+  --step-3: clamp(1.9531rem, 1.6447rem + 1.3161vi, 2.6647rem);
+  --step-4: clamp(2.4414rem, 1.9599rem + 2.0543vi, 3.552rem);
+  --step-5: clamp(3.0518rem, 2.3221rem + 3.1132vi, 4.7348rem);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+h1 {
+  font-size: var(--step-3);
+  color: var(--colors-grey-100);
+  font-weight: bold;
+}
+h2 {
+  font-size: var(--step-2);
+  color: var(--colors-grey-100);
+}
+h3 {
+  font-size: var(--step-1);
+  color: var(--colors-grey-100);
+}
+h4 {
+  font-size: var(--step-0);
+  color: var(--colors-grey-80);
+}
+p {
+  font-size: var(--step-0);
+  color: var(--colors-grey-80);
+}
+
+a {
+  font-size: var(step-0);
+  color: var(--colors-brand-orange-70);
+  &:hover {
+    filter: drop-shadow(0 0 2px var(--colors-brand-yellow-40));
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} */
