--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+/* @font-face {
+  font-family: Poppins;
+  src: url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'");
+}
+@font-face {
+  font-family: Libre;
+  src: url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+} */
 
 :root {
   /* colors */
@@ -27,22 +37,29 @@
   --step-3: clamp(1.9531rem, 1.6447rem + 1.3161vi, 2.6647rem);
   --step-4: clamp(2.4414rem, 1.9599rem + 2.0543vi, 3.552rem);
   --step-5: clamp(3.0518rem, 2.3221rem + 3.1132vi, 4.7348rem);
+
+
 }
 
 h1 {
+  /* font-family: var(--font-libre); */
   font-size: var(--step-3);
   color: var(--colors-grey-100);
   font-weight: bold;
 }
 h2 {
+  /* font-family: var(--font-libre); */
+  font-weight: bold;
   font-size: var(--step-2);
   color: var(--colors-grey-100);
 }
 h3 {
-  font-size: var(--step-1);
+  /* font-family: Poppins; */
+  font-size: var(--step-2);
   color: var(--colors-grey-100);
 }
 h4 {
+  /* font-family: var(--font-poppins); */
   font-size: var(--step-0);
   color: var(--colors-grey-80);
 }
@@ -51,10 +68,20 @@ p {
   color: var(--colors-grey-80);
 }
 
-a {
-  font-size: var(step-0);
-  color: var(--colors-brand-orange-70);
-  &:hover {
-    filter: drop-shadow(0 0 2px var(--colors-brand-yellow-40));
+nav{
+  a {
+    font-size: var(--step-2);
+    font-weight: 300;
+    /* background: var(--colors-grey-00);
+    color: var(--colors-brand-orange-70); */
+    /* color: var(--colors-brand-orange-70); */
+    &:hover {
+      /* font-weight: 500; */
+      background-color: var(--colors-brand-turquoise-00);
+      filter: drop-shadow(0 4px 4px var(--colors-brand-turquoise-50));
+      
+      /* filter: drop-shadow(0 0 2px var(--colors-brand-yellow-40)); */
+    }
   }
+
 }
