--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,8 +37,10 @@
   --step-3: clamp(1.9531rem, 1.6447rem + 1.3161vi, 2.6647rem);
   --step-4: clamp(2.4414rem, 1.9599rem + 2.0543vi, 3.552rem);
   --step-5: clamp(3.0518rem, 2.3221rem + 3.1132vi, 4.7348rem);
+}
 
-
+body {
+  background: var(--colors-brand-beige-00);
 }
 
 h1 {
@@ -69,7 +71,7 @@ p {
   color: var(--colors-grey-80);
 }
 
-nav{
+nav {
   background-color: var(--colors-brand-turquoise-00);
   a {
     font-size: var(--step-1);
@@ -81,9 +83,8 @@ nav{
       /* font-weight: 500; */
       /* background-color: var(--colors-brand-turquoise-00); */
       filter: drop-shadow(0 4px 4px var(--colors-brand-turquoise-50));
-      
+
       /* filter: drop-shadow(0 0 2px var(--colors-brand-yellow-40)); */
     }
   }
-
 }
