Refactor Header component to include Diversa logo and update styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,8 @@ p {
 a {
   font-family: var(--font-poppins);
   font-size: var(--step-0);
+  text-decoration: underline;
+  color: var(--colors-brand-orange-70);
 }
 
 nav {
